@startuml
'https://plantuml.com/sequence-diagram

title GUI Structure


package "cli" {
abstract class AbstractIdeContext
}
package "gui" {
  class AppLauncher {
    +void main(String [])
  }

  class App {
    +void main(String [])
    +void start()
  }

  class IdeGuiStateManager {
      -String projectDirectory
      -IdeGuiContext currentContext
      --
      -IdeGuiStateManager()
      +{static} IdeGuiStateManager getInstance()
      ..GUI context handling..
      +IdeGuiContext switchContext(projectName: String, workspaceName: String)
      +IdeGuiContext getCurrentContext()
      +void addStateChangeListener(StateChangeListener listener)
      +void removeStateChangeListener(StateChangeListener listener)
  }

  class MainController {
    -void initialize()
    ..
    -void setProjectsCombobox()
    -void setWorkspaceValue()
    ..
    -void updateContext(String projectName, String workspaceName)
  }

  abstract class "IdeGuiStateManager.StateChangeListener" as StateChangeListener {
    +void onStateChange(IdeGuiContext newContext)
  }

  class IdeGuiContext


  note right of IdeGuiStateManager
    In the most basic sense, the GUI state depends on the current project context.
    This is important to ensure that any commandlets will be executed in the correct project.
  end note
  note right of App: FXML layout is loaded here
  note right of IdeGuiContext: This will implement modals/progress bars
}


'' Relations ''

AppLauncher --> App : launches

IdeGuiContext ..> AbstractIdeContext : extends

IdeGuiStateManager ..> IdeGuiContext : creates/manages instances of
IdeGuiStateManager --> StateChangeListener : inner class

App ..> MainController : initializes when loading layout
MainController ..> IdeGuiStateManager : accesses/interacts with

@enduml
